api test with login,signup,product,addproduct form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,55 +1,2 @@
-<div class="container mt-5" >
-  <div class="row d-flex justify-content-center align-items-center">
-    <div class="col-sm-12 col-md-8 border">
-      <h3 class="mt-4 text-center">Enter Your Details</h3>
-        <form class="form-inline m-5 justify-content-center " name="form" [formGroup]="form">
-          <ng-containe formArrayName="user_detail">
-            <div class="row mb-5" *ngFor="let doc of getForm(); let i=index">
-              <ng-container [formGroupName]="i">
-                <div class="form-group mb-2">
-                  <label for="staticEmail2" class="sr-only">First Name</label>
-                  <input type="text" formControlName="first_name" class="form-control" id="staticEmail2"
-                    placeholder="First Name">
-                </div>
-                <div class="form-group mx-sm-3 mb-2">
-                  <label for="inputPassword2" class="sr-only">Last Name</label>
-                  <input type="text" formControlName="last_name" class="form-control" id="inputPassword2"
-                    placeholder="Last Name">
-                </div>
-                <button type="submit" (click)="remove(i)" *ngIf="getForm().length > 1"
-                  class="btn btn-danger mb-2 mr-2">Remove</button>
-                <span *ngIf="i == (getForm().length - 1)">
-                  <button type="submit" (click)="add()" class="btn btn-primary mb-2">Add</button>
-                </span>
-              </ng-container>
-            </div>
-            <div class="row ">
-              <button type="submit" [disabled]="!form.valid" class="btn btn-primary " (click)="submit()">Submit</button>
-            </div>
-          </ng-containe>
-        </form>
-    </div>
-  </div>
-</div>
-
-<!-- create table -->
-<div class="row p-4 justify-content-center" *ngIf="userList.length">
-  <div class="col-sm-12 col-md-8">
-    <table class="table table-hover ">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">S.no</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of userList; let i = index">
-          <th scope="row">{{i+1}}</th>
-          <td>{{user.first_name}}</td>
-          <td>{{user.last_name}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+<router-outlet></router-outlet>
+<app-product></app-product>
